# compress_wi_primes

./: Cargo.toml  README.md
src/: dyn_bit_string.rs  encode_prime.rs  encoding_small_int.rs  encoding_u32.rs  encoding_uint.rs  encoding_uint_trait.rs  get_env_var.rs  lib.rs  main.rs  plot.rs  primes.rs
