[package]
name = "compress_wi_primes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitstring = { version = "0.1.2" }
rand = "0.9.0-alpha.1"
thread-priority = "1.1.0"
time = "0.3.36"
log = "0.4.21"
num_cpus = "1.0"
plotters = "0.3.3"
partial-min-max = "0.4.0"
byteorder = "1.5.0"